name:                criterion-external
version:             0.2
synopsis:            Simple demonstration of how to use Criterion to benchmark
                     separate executables.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
copyright:           (C) 2016-2018 Ryan Newton
category:            Development, Performance, Testing, Benchmarking
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

executable criterion-external
  main-is:             Main.hs
  build-depends:       base >=4.8,
                       process, split,
                       criterion >= 1.2.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts

executable criterion-interactive
  main-is:             MainInteractive.hs
  build-depends:       base >=4.8, process, split,
                       criterion >= 1.2.1.0,
                       deepseq
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts


executable simple-haskell-io-loop
  main-is:             IOLoop.hs
  build-depends:       base >=4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2

executable simple-haskell-pure-loop
  main-is:             PureLoop.hs
  build-depends:       base >=4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
