name:                criterion-external
version:             0.2
synopsis:            Simple demonstration of how to use Criterion to benchmark
                     separate executables
description:         Simple demonstration of how to use Criterion to benchmark
                     separate executables.
license:             BSD3
license-file:        LICENSE
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
copyright:           (C) 2016-2018 Ryan Newton
category:            Development, Performance, Testing, Benchmarking
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3
                   , GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.1

source-repository head
  type:     git
  location: https://github.com/rrnewton/criterion-external

executable criterion-external
  main-is:             Main.hs
  build-depends:       base >= 4.8 && < 5,
                       criterion >= 1.2.1.0,
                       process,
                       split
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts

executable criterion-interactive
  main-is:             MainInteractive.hs
  build-depends:       base >= 4.8 && < 5,
                       criterion >= 1.2.1.0,
                       deepseq,
                       process,
                       split
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts


executable simple-haskell-io-loop
  main-is:             IOLoop.hs
  build-depends:       base >= 4.8 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2

executable simple-haskell-pure-loop
  main-is:             PureLoop.hs
  build-depends:       base >= 4.8 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
